--- a/EdgeFix/start.HTML
+++ b/EdgeFix/start.HTML
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Demo</title>
-<link href="Start/html/STC_CSS.css" rel="stylesheet" type="text/css" />
+<link href="Start/html/BS.css" rel="stylesheet" type="text/css" />
 </head>
 <script>
 function BrowserSpecific()
